# cmake-sdl2-gl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
inc/: common.h
src/: CMakeLists.txt  main.cpp
src/engine/: shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h
src/engine/shaders/: sprite.frag  sprite.vert
src/engine/sockets/: common.cpp  common.h
src/game/: net.cpp  net.h
